OPENDEV SDK rules in parity with gateway rules, part 1  (#498)
* OPENDEV SDK rules in parity with gateway rules, part 1

Why This Change Is Necessary
========================================================================
When we first implemented rubocop in the SDK, we copy pasted the rules
employed by the gateway repo. It's been a few years since we last got
the SDK's rules in sync with that codebase, so this commit starts that
work with _relevant_ cops in alphabetical order (a - e).

There are some rules that we can't implement _today_ as they would
require a breaking change to the SDK. In that case, I went ahead and
added a NEXT_MAJOR_VERSION note detailing what changes need to occur
once we can make breaking changes.

What These Changes Do To Address the Issue
========================================================================
Adds new rules to be in parity with the gateway and makes sure lints
pass.

Side Effects Caused By This Change
========================================================================

None expected.

------------------------------------------------------------------------

**Relevant Links:**

------------------------------------------------------------------------

* fix up name of linting rule in comment

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -33,6 +33,12 @@ Layout/IndentationStyle:
 Layout/TrailingWhitespace:
   Enabled: true
 
+Lint/AmbiguousAssignment:
+  Enabled: true
+
+Lint/AmbiguousBlockAssociation:
+  Enabled: true
+
 Lint/AmbiguousOperator:
   Enabled: true
 
@@ -57,7 +63,18 @@ Lint/CircularArgumentReference:
 Lint/ConstantDefinitionInBlock:
   Enabled: true
 
+# NEXT_MAJOR_VERSION add ConstantResolution rule and start changing all constants to
+# SCREAMING_SNAKE_CASE
+Lint/ConstantResolution:
+  Enabled: false
+
+Lint/Debugger:
+  Enabled: true
+
 Lint/DeprecatedClassMethods:
+  Enabled: true
+
+Lint/DeprecatedConstants:
   Enabled: true
 
 Lint/DeprecatedOpenSSLConstant:
@@ -78,6 +95,9 @@ Lint/DuplicateHashKey:
 Lint/DuplicateMethods:
   Enabled: true
 
+Lint/DuplicateRegexpCharacterClassElement:
+  Enabled: true
+
 Lint/DuplicateRequire:
   Enabled: true
 
@@ -88,6 +108,15 @@ Lint/EachWithObjectArgument:
   Enabled: true
 
 Lint/ElseLayout:
+  Enabled: true
+
+Lint/EmptyBlock:
+  Enabled: true
+  AllowComments: true
+  Exclude:
+  - spec/integration/braintree/document_upload_spec.rb
+
+Lint/EmptyClass:
   Enabled: true
 
 Lint/EmptyConditionalBody:
