OPENDEV SDK lint rules in parity with gateway rules, part 3 (#500)
* OPENDEV SDK lint rules in parity with gateway rules, part 3

Why This Change Is Necessary
========================================================================
When we first implemented rubocop in the SDK, we copy pasted the rules
employed by the gateway repo. It's been a few years since we last got
the SDK's rules in sync with that codebase, so this commit starts that
work with relevant linting cops in alphabetical order (just the linting
rules that start with r).

What These Changes Do To Address the Issue
========================================================================
Added linting rules that started with the letter r and then ran
autocorrect to fix linting violations for the following rules:

- Lint/RedundantRequireStatement
- Lint/RedundantStringCoercion
- Lint/RedundantSplatExpansion

Side Effects Caused By This Change
========================================================================

None expected.

------------------------------------------------------------------------

**Relevant Links:**

------------------------------------------------------------------------

* PR feedback fix a-z sorting

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -229,6 +229,54 @@ Lint/PercentStringArray:
 
 Lint/PercentSymbolArray:
   Enabled: true
+  
+Lint/RaiseException:
+  Enabled: true
+
+Lint/RandOne:
+  Enabled: true
+
+Lint/RedundantCopDisableDirective:
+  Enabled: true
+
+Lint/RedundantCopEnableDirective:
+  Enabled: true
+
+Lint/RedundantDirGlobSort:
+  Enabled: true
+
+Lint/RedundantRequireStatement:
+  Enabled: true
+
+Lint/RedundantSafeNavigation:
+  Enabled: true
+
+Lint/RedundantSplatExpansion:
+  Enabled: true
+
+Lint/RedundantStringCoercion:
+  Enabled: true
+
+Lint/RedundantWithIndex:
+  Enabled: true
+
+Lint/RedundantWithObject:
+  Enabled: true
+
+Lint/RegexpAsCondition:
+  Enabled: true
+
+Lint/RequireParentheses:
+  Enabled: true
+
+Lint/RescueException:
+  Enabled: true
+
+Lint/RescueType:
+  Enabled: true
+
+Lint/ReturnInVoidContext:
+  Enabled: true
 
 Lint/SuppressedException:
   Enabled: false
