OPENDEV SDK lint rules in parity with gateway rules, part 4 (#501)
* OPENDEV SDK lint rules in parity with gateway rules, part 4

When we first implemented rubocop in the SDK, we copy pasted the rules
employed by the gateway repo. It's been a few years since we last got
the SDK's rules in sync with that codebase, so this commit starts that
work with relevant linting cops in alphabetical order (just the linting
rules that start with s).

Why This Change Is Necessary
========================================================================
Added linting rules that started with the letter r and then fixed
linting violations for the following rules:

- Lint/ShadowingOuterLocalVariable

What These Changes Do To Address the Issue
========================================================================

Side Effects Caused By This Change
========================================================================

None expected.

------------------------------------------------------------------------

**Relevant Links:**

------------------------------------------------------------------------

* PR feedback fix a-z sorting

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -278,6 +278,38 @@ Lint/RescueType:
 Lint/ReturnInVoidContext:
   Enabled: true
 
+Lint/SafeNavigationChain:
+  Enabled: true
+
+Lint/SafeNavigationConsistency:
+  Enabled: true
+
+Lint/SafeNavigationWithEmpty:
+  Enabled: true
+
+Lint/ScriptPermission:
+  Enabled: true
+
+Lint/SelfAssignment:
+  Enabled: true
+
+Lint/SendWithMixinArgument:
+  Enabled: true
+
+Lint/ShadowedArgument:
+  Enabled: true
+
+Lint/ShadowedException:
+  Enabled: true
+
+Lint/ShadowingOuterLocalVariable:
+  Enabled: true
+  Exclude:
+   - spec/**/*
+
+Lint/StructNewOverride:
+  Enabled: true
+
 Lint/SuppressedException:
   Enabled: false
 
