OPENDEV SDK lint rules in parity with gateway rules, part 6 (#507)
Why This Change Is Necessary
========================================================================
When we first implemented rubocop in the SDK, we copy pasted the rules
employed by the gateway repo. It's been a few years since we last got
the SDK's rules in sync with that codebase, so this commit starts that
work with relevant linting cops in alphabetical order (a few linting
rules that start with U. I stopped when I hit a rule that required
manual changes).

What These Changes Do To Address the Issue
========================================================================
Added linting rules that started with the letter u and then fixed
linting violations for the following rules:

- Lint/UselessAssignment

Side Effects Caused By This Change
========================================================================

None expected.

------------------------------------------------------------------------

**Relevant Links:**

  * [Ticket Link][1]

------------------------------------------------------------------------

[1]: https://engineering.paypalcorp.com/jira/browse/

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -341,6 +341,12 @@ Lint/UnderscorePrefixedVariableName:
 Lint/UnexpectedBlockArity:
   Enabled: true
 
+Lint/UnifiedInteger:
+  Enabled: true
+
+Lint/UnmodifiedReduceAccumulator:
+  Enabled: true
+
 Lint/UnreachableCode:
   Enabled: true
   Exclude:
@@ -350,6 +356,18 @@ Lint/UnreachableLoop:
   Enabled: true
 
 Lint/UnusedBlockArgument:
+  Enabled: true
+
+Lint/UriEscapeUnescape:
+  Enabled: true
+
+Lint/UriRegexp:
+  Enabled: true
+
+Lint/UselessAccessModifier:
+  Enabled: true
+
+Lint/UselessAssignment:
   Enabled: true
 
 Style/DefWithParentheses:
