Update cops to gateway part 7 (#523)

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -370,6 +370,23 @@ Lint/UselessAccessModifier:
 Lint/UselessAssignment:
   Enabled: true
 
+Lint/UselessElseWithoutRescue:
+  Enabled: true
+
+Lint/UselessMethodDefinition:
+  Enabled: true
+
+Lint/UselessSetterCall:
+  Enabled: true
+
+Lint/UselessTimes:
+  Enabled: true
+
+Lint/Void:
+  Enabled: true
+  Exclude:
+   - spec/**/*
+
 Style/DefWithParentheses:
   Enabled: true
 
