--- a/.github/workflows/release-to-public.yml
+++ b/.github/workflows/release-to-public.yml
@@ -10,7 +10,7 @@ jobs:
   release:
     # Only run if the PR was merged (not just closed)
     if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
+    runs-on: gh-2-core-ubuntu-latest
 
     steps:
       - name: Checkout automated_release_test branch
